2006-08-21  Matthew Barnes  <mbarnes@redhat.com>

	* mail-account-disable.c:
	"Disable" did not work for "On This Computer"  - fixes bug 350901.

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* mail-account-disable.c:
	use libedataserver/e-account-list.h instead of e-util/e-account-list.h.
	use libedataserver/e-account.h instead of e-util/e-account.h.

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: Remove the special case for win32, its a bug on all
	platforms, silly.

	* mail-account-disable.c (mail_account_disable): make signature
	match usage.

2005-07-13  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (INCLUDES): Remove duplicated line.
	(LDFLAGS): Use NO_UNDEFINED.
	(LIBADD): Link with the required libraries, but let's do it only
	on Win32.

	* org-gnome-mail-account-disable.eplug.xml: Use SOEXT.

2005-07-12 Vivek Jain <jvivek@novell.com>
	
	have a ChangeLog and transfer the changelog entry from the main
	ChangeLog
	(2005-07-10  Shreyas Srinivasan <sshreyas@novell.com>)

	* plugins/mail-account-disable/*: Plugin to add Disable/ Proxy
	Logout to a store menu on right click.
