@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
 <e-plugin-list>
-  <e-plugin id="org.gnome.mail.account.disable" 
-   type="shlib" domain="evolution" _name="Disable Account"
-   location="@PLUGINDIR@/libmail-account-disable@SOEXT@">
-    <_description>Allows disabling of accounts.</_description>
-    <author name="Shreyas Srinivasan" email="sshreyas@novell.com"/>
-    <hook class="org.gnome.evolution.mail.popup:1.0">
-      <menu id="org.gnome.evolution.mail.foldertree.popup" target="folder"
-factory = "org_gnome_create_mail_account_disable">
-      </menu>
-    </hook>
-  </e-plugin>
+	<e-plugin 
+		id="org.gnome.mail.account.disable" 
+		type="shlib"
+		domain="@GETTEXT_PACKAGE@"
+		_name="Disable Account"
+		location="@PLUGINDIR@/libmail-account-disable@SOEXT@">
+		<_description>Allows disabling of accounts.</_description>
+		<author name="Shreyas Srinivasan" email="sshreyas@novell.com"/>
+
+		<hook class="org.gnome.evolution.mail.popup:1.0">
+			<menu id="org.gnome.evolution.mail.foldertree.popup" target="folder"
+				factory="org_gnome_create_mail_account_disable">
+			</menu>
+		</hook>
+	</e-plugin>
 </e-plugin-list>
