@@ -1,3 +1,11 @@
+2007-04-02  Sankar P  <psankar@novell.com>
+
+	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>
+
+	* org-gnome-mail-account-disable.eplug.xml:
+	Cleanup. 
+	Fixes part of #301149
+
 2006-08-21  Matthew Barnes  <mbarnes@redhat.com>
 
 	* mail-account-disable.c:
